CHANGES
=======

1.14 (unreleased)
-----------------

- Cache invalidaion is smarter now. This allows processing larger amounts of
  invalidation events without the knowledge about the kind of the change
  (delete, add, ...).

- Do not operate on paths and URLs but only pass URLs to the WebDAV server.

1.13 (2009-06-04)
-----------------

- Made sure the {INTERNAL}cached-time is not stored on the DAV.

- Fixed a bug in the property cache conflict resolver which took the
  cached-time into account.

1.12 (2009-06-03)
-----------------

- Relatexed othersystem locks: If there is a lock the connector doesn't know
  about, but knows about the locking user id (principal), it considers the lock
  as if it was the connectors lock (#4996).

1.11.1 (2009-05-15)
-------------------

- Alle ``test.py`` nach ``tests.py`` umbenannt.

1.11 (2009-04-23)
-----------------

- The lock time out now works also with the property cache. Locks were just not
  timing out when using the fully integrated connector (fixes #4997).

1.10 (2009-04-09)
-----------------

- Fixed »AttributeError: 'BTrees.OOBTree.OOTreeSet' object has no attribute
  'add'« which occured on existing databases.

- Fixed refresh-cache to not fail with a bogus property cache.

- Improved ConflictResolution so equal states are kept instead of thrown away.

1.9 (2009-04-08)
----------------

- Added conflict resolution for the PropertyCache and ChildIdCache. This
  hopefully leads to less conflicts.

- Added an invalidtor runner which refreshes the whole property cache.

1.8 (2009-04-07)
----------------

- Connector knows of lock timeouts now (fixes #4914).

1.7 (2009-03-23)
----------------

- CachedResource now returns a read-only property object (fixes #3869).

1.6.5 (2009-03-04)
------------------

- Mock-Connector returns correct getlastmodified.

1.6.4 (2009-01-19)
------------------

- Fixed a bug in child-id cache which led to an invalid list of child ids in